--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -52,7 +52,7 @@ jobs:
 
       - name: Run tests
         env:
-          DJANGO_SETTINGS_MODULE: taskflow.settings.test
+          DJANGO_SETTINGS_MODULE: taskflow.settings.local
         run: |
           python manage.py migrate
           pytest || true
