--- a/.env.local.sample
+++ b/.env.local.sample
@@ -12,3 +12,16 @@ DATABASE_PORT_HOST=5432
 DATABASE_PORT=5432
 DATABASE_USER=postgres
 DATABASE_PASSWORD=postgres
+
+# Email Settings
+# -----------------------------------------------------------------------------
+EMAIL_BACKEND="django.core.mail.backends.smtp.EmailBackend"
+EMAIL_USE_TLS=True
+EMAIL_HOST="smtp.gmail.com"
+EMAIL_PORT=587
+EMAIL_HOST_USER="your_email@gmail.com"
+EMAIL_HOST_PASSWORD="your_app_password"
+
+# Redis Settings
+# -----------------------------------------------------------------------------
+CELERY_BROKER_URL=redis://redis:6379/0
