--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,4 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = taskflow.settings.local
 python_files = tests.py test_*.py *_tests.py
+filterwarnings = ignore::UserWarning:dj_rest_auth.*
